--- a/style_main.css
+++ b/style_main.css
@@ -83,6 +83,7 @@
     background-color:rgba(167, 146, 129, 1);
     padding: 5px;
     color:black ;
+    border-radius: 13px;
 }
 .jn{
     font-size: larger;
